# opensteuer

libopensteuer/: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.dist  README  TODO  VERSION  configure.ac  libtool-tilde.patch
libopensteuer/Documentation/: Ada  Makefile  Makefile.Documentation  libopensteuer.3
libopensteuer/macros/: Makefile.am  ac_prog_cp_s.m4  acx_compile_warn.m4
libopensteuer/src/: Makefile.am
libopensteuer/src/ada/: .cvsignore  Makefile  Makefile.Ada  Makefile.am  libopensteuer-esttab-y2002.adb  libopensteuer-esttab-y2002.ads  libopensteuer-esttab-y2004.adb  libopensteuer-esttab-y2004.ads  libopensteuer-esttab.adb  libopensteuer-esttab.ads  libopensteuer-global.ads  libopensteuer-lsttab-y2002.adb  libopensteuer-lsttab-y2002.ads  libopensteuer-lsttab-y2004.adb  libopensteuer-lsttab-y2004.ads  libopensteuer-lsttab.adb  libopensteuer-lsttab.ads  libopensteuer-pap-y2002.adb  libopensteuer-pap-y2002.ads  libopensteuer-pap-y2004.adb  libopensteuer-pap-y2004.ads  libopensteuer-pap.adb  libopensteuer-pap.ads  libopensteuer.adb  libopensteuer.ads  libopensteuer.h  make_h.adb
libopensteuer/src/c/: Makefile
libopensteuer/src/swig/: .cvsignore  Makefile.am  libopensteuer.i  test.py
libopensteuer/test/: Makefile.Test  test_ada.adb  test_c.c
opensteuer/: ChangeLog  INSTALL  Makefile  README  TODO
opensteuer/Documentation/: Ada95  opensteuer.1
opensteuer/src/ada/: Makefile  opensteuer.adb  opensteuer_debug.adb  opensteuer_debug.ads  opensteuer_entry.adb  opensteuer_entry.ads  opensteuer_esttab.adb  opensteuer_esttab.ads  opensteuer_globals.adb  opensteuer_globals.ads  opensteuer_lsttab.adb  opensteuer_lsttab.ads  opensteuer_main.adb  opensteuer_main.ads  opensteuer_menu.adb  opensteuer_menu.ads  opensteuer_menu_handlers.adb  opensteuer_menu_handlers.ads  opensteuer_pap.adb  opensteuer_pap.ads  opensteuer_pap.h
test/: .cvsignore  ChangeLog  Makefile  test_ada.adb  test_c.c  test_libopensteuer.adb  testc_libopensteuer.c
